# api-template

./: .env.example  .gitignore  README.md  docker-compose.yaml  makefile  noxfile.py  pyproject.toml
src/app/interactors/: base.py
src/domain/entities/: user.py
src/domain/entities/mixins/: with_id.py  with_owner.py
template/: __main__.py
template/app/: errors.py
template/app/dtos/: user.py
template/app/interactors/: __init__.py  base.py  transform.py
template/app/interactors/users/: create.py  delete.py  get.py  update.py
template/app/interfaces/: errors.py  option.py
template/app/interfaces/repos/: __init__.py  crud.py  gateway.py  transaction_manager.py  user.py
template/app/interfaces/security/: hasher.py
template/domain/: errors.py
template/domain/entities/: base.py  user.py
template/domain/entities/mixins/: with_id.py  with_owner.py
template/infra/: option.py
template/infra/clients/: __init__.py
template/infra/clients/http/: base.py  client.py  errors.py  types.py
template/infra/persistence/: alembic.ini
template/infra/persistence/migrations/: env.py
template/infra/security/: hasher.py
template/internal/: root.py
template/internal/di/: depends.py
template/internal/tools/: dto.py  singleton.py
template/main/: decoder.py  settings.py
template/main/api/: __init__.py  api.py  config.py  cors.py  openapi.py
template/main/ios/: __init__.py  container.py  handlers.py  psql.py
template/main/ios/providers/: psql.py  (+2 more)
template/main/ioс/: container.py
template/presentation/http/: __init__.py
tests/integration/: conftest.py
(+30 files in other folders)
