[project]
name = "sigma-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.4",
    "argon2-cffi>=23.1.0",
    "asyncpg>=0.30.0",
    "dishka>=1.6.0",
    "fastapi>=0.116.1",
    "greenlet>=3.2.4",
    "msgspec>=0.19.0",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.43",
    "uuid-utils>=0.11.0",
]
