[project]
name = "sigma-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "alembic>=1.16.4",
    "argon2-cffi>=23.1.0",
    "asyncpg>=0.30.0",
    "dishka>=1.6.0",
    "greenlet>=3.2.4",
    "litestar[jwt]>=2.17.0",
    "msgspec>=0.19.0",
    "mypy>=1.19.1",
    "nox>=2025.11.12",
    "orjson>=3.11.3",
    "pydantic-settings>=2.10.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "sqlalchemy>=2.0.43",
    "testcontainers>=4.13.3",
    "uuid-utils>=0.11.0",
    "uvicorn>=0.35.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
